# 2021-2022-capstone_openmanipulator

./: README.md
Master PC/Add_two_ints/add_two_ints_server/: add_two_ints_server.cpp
Master PC/Add_two_ints/srv/: Twoints.srv
Master PC/Image_window/: CMakeLists.txt  package.xml
Master PC/Image_window/src/: img_window.cpp
Master PC/Master & Slave/: CMakeLists.txt
Master PC/Master & Slave/include/open_manipulator_master_slave/: open_manipulator_master.h
Master PC/Master & Slave/src/: open_manipulator_master.cpp
slavePC/Pick & Place/: CMakeLists.txt  package.xml
slavePC/Pick & Place/msg/: gripper_state.msg
slavePC/Pick & Place/open_manipulator_pick_and_place/include/open_manipulator_pick_and_place/: open_manipulator_pick_and_place.h
slavePC/Pick & Place/src/: open_manipulator_pick_and_place.cpp
